# COMP426_A3-Multicore_Implementation_of_2D_Bouncing_Balls_Simulation_on_the_GPU

./: CMakeLists.txt  README.md  kernel.cl  main.cpp
